# steroid

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README.md
cmake/: build-common.cmake  build-core.cmake  build-module.cmake  copy-plugins.cmake  modules.cmake  options.cmake  utils.cmake
cmake/modules/: build-logger-libsir.cmake  build-logger-simple.cmake  build-opts-ketopt.cmake
cmake/toolchains/: toolchain-cross-x86_64-linux-gnu.cmake
doc/: lua_funcs.md
include/steroids/: angle.h  atlas.h  bitmap.h  bmcodec.h  config.h.in  drawq.h  dynarr.h  events.h  fnv1.h  fnv1a.h  fs.h  gfxctx.h  gldebug.h  glloader.h  hash_table.h  htable.h  ini.h  keyboard.h  logger.h  lua.h  luabind.h  matrix3x3.h  module.h  monitor.h  mouse.h  opts.h  pathtools.h  plugin.h  png.h  rbuf.h  render.h  runner.h  so.h  spcpaths.h  sprite.h  string.h  terminal.h  texture.h  timer.h  vec2.h  (+3 more)
include/steroids/stdlib/: string.h
include/steroids/stdlib/sys/: queue.h
include/steroids/types/: list.h  modctx.h  modules.h  object.h
include/steroids/types/modules/: angle.h  atlas.h  bitmap.h  bmcodec.h  drawq.h  dynarr.h  events.h  fnv1.h  fnv1a.h  fs.h  gfxctx.h  gldebug.h  glloader.h  hash_table.h  htable.h  ini.h  keyboard.h  logger.h  lua.h  luabind.h  matrix3x3.h  monitor.h  mouse.h  opts.h  pathtools.h  plugin.h  png.h  rbuf.h  render.h  runner.h  so.h  spcpaths.h  sprite.h  terminal.h  texture.h  timer.h  vec2.h  vector.h  window.h  zip.h
scripts/: build_dockerfile.py
src/: dlist.h  list.c  list.h  slist.c  slist.h  utils.c  utils.h
src/common/dlist/: CMakeLists.txt  dlist.c  dlist.h
src/common/slist/: CMakeLists.txt  slist.c  slist.h
src/core/: CMakeLists.txt  core.c  genid.c  genid.h  internal_modules.h.in  iwyu.imp  main.c  modules_manager.c  modules_manager.h  types.h
src/modules/angle/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h
src/modules/atlas/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h  types.h
src/modules/bitmap/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h  types.h
src/modules/bmcodec/libpng/: CMakeLists.txt  config.h.in  libpng.c  libpng.h  types.h
src/modules/bmcodec/stb_image/: CMakeLists.txt  config.h.in  stb_image.c  stb_image.h  types.h
src/modules/drawq/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h  types.h
src/modules/dynarr/scv/: CMakeLists.txt  config.h.in  scv.c  scv.h  types.h
src/modules/events/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h  types.h
src/modules/fnv1/fnv_hash/: CMakeLists.txt  config.h.in  fnv_hash.c  fnv_hash.h  iwyu.imp
src/modules/fnv1a/fnv_hash/: CMakeLists.txt  config.h.in  fnv_hash.c  fnv_hash.h  iwyu.imp
src/modules/fnv1a/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h  types.h
src/modules/fs/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h  types.h
src/modules/gfxctx/egl/: CMakeLists.txt  config.h.in  egl.c  egl.h  types.h
src/modules/gldebug/opengl/: CMakeLists.txt  config.h.in  opengl.c  opengl.h  types.h
src/modules/glloader/egl/: CMakeLists.txt  config.h.in  egl.c  egl.h
src/modules/hash_table/hash_table/: CMakeLists.txt  config.h.in  hash_table.c  hash_table.h  iwyu.imp  types.h
src/modules/htable/hash_table/: CMakeLists.txt  config.h.in  hash_table.c  hash_table.h  iwyu.imp  types.h
src/modules/ini/inih/: CMakeLists.txt  config.h.in  inih.c  inih.h  iwyu.imp  types.h
src/modules/keyboard/simple/: CMakeLists.txt  config.h.in  simple.c  simple.h  types.h
src/modules/logger/libsir/: CMakeLists.txt  config.h.in  iwyu.imp  libsir.c  libsir.h  types.h
src/modules/logger/simple/: CMakeLists.txt  config.h.in  iwyu.imp  simple.c  simple.h
src/modules/lua/luajit/: CMakeLists.txt  config.h.in  luajit.c  luajit.h  types.h
src/modules/luabind/angle/: CMakeLists.txt  angle.c  angle.h  config.h.in
src/modules/luabind/atlas/: CMakeLists.txt  atlas.c  atlas.h  config.h.in
src/modules/luabind/bitmap/: CMakeLists.txt  bitmap.c  bitmap.h  config.h.in
src/modules/luabind/drawq/: CMakeLists.txt  config.h.in  drawq.c  drawq.h
src/modules/luabind/dynarr/: CMakeLists.txt  config.h.in  dynarr.c  dynarr.h
src/modules/luabind/events/: CMakeLists.txt  config.h.in  events.c  events.h
src/modules/luabind/fs/: CMakeLists.txt  config.h.in  fs.c  fs.h
src/modules/luabind/gfxctx/: CMakeLists.txt  config.h.in  gfxctx.c  gfxctx.h
src/modules/luabind/keyboard/: CMakeLists.txt  config.h.in  keyboard.c  keyboard.h
src/modules/luabind/logger/: CMakeLists.txt  config.h.in  logger.c  logger.h
src/modules/luabind/matrix3x3/: CMakeLists.txt  config.h.in  matrix3x3.c  matrix3x3.h  vec2.c  vec2.h
src/modules/luabind/monitor/: CMakeLists.txt  config.h.in  monitor.c  monitor.h
src/modules/luabind/mouse/: CMakeLists.txt  config.h.in  mouse.c  mouse.h
src/modules/luabind/opts/: CMakeLists.txt  config.h.in  opts.c  opts.h
src/modules/luabind/pathtools/: CMakeLists.txt  config.h.in  pathtools.c  pathtools.h
src/modules/luabind/png/: CMakeLists.txt  config.h.in  png.c  png.h
src/modules/luabind/render/: CMakeLists.txt  config.h.in  render.c  render.h
src/modules/luabind/sprite/: CMakeLists.txt  config.h.in  sprite.c  sprite.h
src/modules/luabind/terminal/: CMakeLists.txt  (+3 more)
src/modules/monitor/xlib/: CMakeLists.txt  config.h.in  types.h  xlib.c  xlib.h
src/modules/opts/ketopt/: CMakeLists.txt  config.h.in  iwyu.imp  ketopt.c  ketopt.h  types.h
src/modules/png/libpng/: CMakeLists.txt  config.h.in  libpng.c  libpng.h  types.h
src/modules/rbuf/lwrb/: CMakeLists.txt  config.h.in  lwrb.c  lwrb.h  types.h
src/modules/render/opengl/: CMakeLists.txt  batcher.inc  batcher.inl  config.h.in  glfuncs.h  glfuncs.imp  glfuncs.inl  logger.h  modules_data.h  render.c  render.h  shader.inl  shdprog.inl  types.h  vao.inl  vbo.inl  vertattr.inl  vertices.inc  vertices.inl
src/modules/so/simple/: CMakeLists.txt  config.h.in  iwyu.imp  simple.c  simple.h  types.h
src/modules/texture/opengl/: CMakeLists.txt  config.h.in  opengl.c  opengl.h  types.h
src/modules/zip/zip/: CMakeLists.txt  config.h.in  types.h  zip.c  zip.h
src/stdlib/: strlcpy.c
(+81 files in other folders)
